<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">MoodTracker</string>
    <string name="mood_of_the_user">Mood of the user</string>
    <string name="add_comment_button">Add comment Button</string>
    <string name="mood_history_button">Mood History Button</string>
    <string name="show_comment_button">Show Comment Button</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="days_ago">days ago</string>
    <string name="username">Username </string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>

    <plurals name="daysInHistoryScreen">
        <item quantity="zero"></item>
    </plurals>
    <string name="title_activity_mood_history">MoodHistoryActivity</string>
</resources>
